--- a/LogManagerCore2/LogManagerCore2.csproj
+++ b/LogManagerCore2/LogManagerCore2.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="if  &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&#xD;&#xA;      copy /Y /V &quot;$(TargetPath)&quot; &quot;$(SolutionDir)bin\$(TargetFileName)&quot;&#xD;&#xA;)" />
+  </Target>
+
 </Project>
