--- a/log.config.samples/log.type1.config.json
+++ b/log.config.samples/log.type1.config.json
@@ -3,7 +3,7 @@
   "MaxSizeLimitMB": "0.5",
   "LogRotateLimitIndex": "0",
   "Encoding": "utf-8",
-  "LogDirPath": "D:\\temp\\C#\\log",
+  "LogDirPath": "D:\\temp\\C#\\logs",
   "LogFileName": "type1_warn_",
   "LogFileNameExtension": ".log",
   "LogFileNamePrefixDateTimeString": "",
